--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
     file_picker: ^8.1.4
     provider: ^6.1.2
     shared_preferences: ^2.3.4
+    
+    flutter_localizations:
+        sdk: flutter
 
     # The following adds the Cupertino Icons font to your application.
     # Use with the CupertinoIcons class for iOS style icons.
